# ShardCLI

./: .gitignore  LICENSE  README.md  pyproject.toml
shardcli/: main.py  requirements.txt
shardcli/config/: __init__.py  config.py
shardcli/core/: __init__.py  environment.py  executor.py  models.py  orchestrator.py
shardcli/engine/: __init__.py  risk_engine.py  risk_types.py
shardcli/engine/policy/: __init__.py  base.py  default.py  relaxed.py  strict.py
shardcli/interface/: __init__.py  cli.py
shardcli/llm/: __init__.py  llm_client.py  prompt_builder.py  structured_output.py
shardcli/llm/models/: command_result.py
