[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shard-cli"
version = "0.1.0"
description = "Shard — AI-powered terminal assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Your Name" }
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "groq>=0.5.0",
    "instructor>=1.3.0"
]

[project.scripts]
shard = "shardcli.main:main"

[tool.setuptools.packages.find]
where = ["."]
